Plataforma  rodi portal  fase de pruebas x1

--- a/css/custom.css
+++ b/css/custom.css
@@ -118,9 +118,13 @@
   color: white;
   background: #45b2f5;
 }
+.icono_amarillo{
+  color: white;
+  background: #e8cb4a;
+}
 .icono_rojo{
   color: white;
-  background: #c12036;
+  background: #cd5868;
 }
 .icono_gris{
   color: white;
