--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -10802,11 +10802,11 @@ a:focus {
   }
 }
 
-.bg-login-image {
+/*.bg-login-image {
   background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
   background-position: center;
   background-size: cover;
-}
+} 
 
 .bg-register-image {
   background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
@@ -10819,7 +10819,7 @@ a:focus {
   background-position: center;
   background-size: cover;
 }
-
+*/
 form.user .custom-checkbox.small label {
   line-height: 1.5rem;
 }
