Subiendo  cambios  Catalogo _portales

--- a/css/custom.css
+++ b/css/custom.css
@@ -281,6 +281,10 @@ color: white;
 .texto_sutil{
   color: darkgrey !important;
 }
+
+.centered-content {
+  text-align: center;
+}
 /*----------------------------------------*/
 /*  Modals
 /*----------------------------------------*/
