--- a/css/paneles/clientes.css
+++ b/css/paneles/clientes.css
@@ -317,3 +317,17 @@ td{ vertical-align: middle !important; }
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset;
   transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
 }
+
+@media (max-width: 768px) {
+  .div1 {
+    display: none;
+  }
+
+  .div2.d-none {
+    display: block;
+  }
+
+  .btn-secondary {
+    display: block;
+  }
+}
