--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,25 @@
 /*----------------------------------------*/
 /*  General
 /*----------------------------------------*/
+/*Boton Perszonalizado*/
+
+/* Aumentar la especificidad */
+.btn.btn-navy {
+  background-color: #003366; /* Azul marino */
+  color: white; /* Color del texto blanco */
+  border: 1px solid #003366; /* Borde en azul marino */
+}
+
+.btn.btn-navy:hover {
+  background-color: #002244; /* Azul marino más oscuro para el hover */
+  border-color: #002244; /* Borde en azul marino más oscuro */
+}
+
+.btn.btn-navy:focus, .btn.btn-navy:active {
+  box-shadow: 0 0 0 0.2rem rgba(0, 51, 102, 0.5); /* Sombra de foco en azul marino */
+}
+
+
 .bg-gradient-primary{
   background-color: #365b83 !important;
   background-image: linear-gradient(180deg,#365b83 10%,#1d3a59 100%) !important;
