--- a/css/custom.css
+++ b/css/custom.css
@@ -773,3 +773,139 @@ color: white;
     margin: 0.3em 0;
   }
 }
+
+
+/*  diseño de botones  de nuesvos  modulos */
+
+
+/* Estilo para el contenedor de botones */
+/* Estilo para el contenedor de botones */
+.button-container {
+  display: flex;
+  flex: 1; /* Hace que el contenedor ocupe el espacio disponible */
+  justify-content: space-between; /* Distribuye los botones uniformemente */
+  align-items: center; /* Centra los botones verticalmente */
+  width: 100%;
+ /* Asegura que el contenedor ocupe el ancho completo */
+  position: relative; /* Necesario para los pseudo-elementos de separación */
+}
+
+/* Estilo para los botones */
+.custom-btn {
+  background: none; /* Sin color de fondo */
+  border: 2px solid #007bff; /* Color del borde */
+  color: #007bff; /* Color del texto del botón */
+  border-radius: 0; /* Sin bordes redondeados */
+ /* padding: 15px; /* Ajusta el espaciado interno */
+  text-align: center; /* Centra el texto dentro del botón */
+  font-size: 1.5rem; /* Tamaño de fuente más grande */
+  font-weight: 900;
+  /* Fuente en negrita */
+  text-transform: uppercase; /* Texto en mayúsculas */
+  letter-spacing: 1px; /* Espaciado entre letras */
+  flex: 1; /* Hace que los botones ocupen el mismo ancho */
+  min-width: 0; /* Permite que los botones se reduzcan si es necesario */
+  margin: 0; /* Sin margen para los botones */
+  box-sizing: border-box; /* Asegura que el padding y el borde se incluyan en el ancho total */
+  position: relative; /* Necesario para la separación vertical */
+}
+
+/* Separación vertical entre los botones */
+.custom-btn:not(:last-child)::after {
+  content: "";
+  font-weight: 900;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 0px; /* Grosor de la barra de separación */
+  height: 100%;
+  background-color: rgba(16, 16, 16, 0.397); /* Color de la barra de separación */
+  z-index: 0; /* Asegura que la barra de separación esté detrás del botón */
+}
+
+/* Resaltar el botón activo */
+.custom-btn.active {
+  background-color: rgba(54, 91, 131, 0.968);  /* Color de fondo del botón activo */
+  color: white; /* Color del texto del botón activo */
+}
+
+/* Resaltar el contenedor de botones activo */
+.button-container.active {
+  background-color: rgba(247, 249, 250, 0.994); /* Fondo iluminado para el contenedor de botones activo */
+ /* Borde del contenedor activo */
+ color: white; 
+ /* Añadir padding para hacer visible el borde */
+  border-radius: 5px; /* Bordes redondeados para el contenedor */
+}
+
+/* diseño  de    divisores  del menu lateral  */
+
+.divider-container {
+  position: relative;
+ /* Ajuste del margen superior e inferior */
+  text-align: left; /* Centra el texto y la línea */
+}
+
+
+
+.divider-container span {
+
+  display: inline-block;
+  font-weight: 600;
+  background: rgb(54, 91, 131);/* Color de fondo difuminado para el texto */
+  color: #ffffffe1; /* Color del texto */
+  padding: 0 10px; /* Elimina el espaciado alrededor del texto */
+  margin: 0; /* Asegura que no haya margen alrededor del texto */
+  line-height: 1; /* Ajusta la altura de línea para alinear el texto con la línea divisoria */
+  z-index: 2; /* Asegura que el texto esté por encima de la línea */
+  white-space: nowrap; /* Evita el salto de línea del texto */
+  border-radius: 10px;
+ 
+  /* Opcional: agrega bordes redondeados */
+}
+
+.custom-menu {
+  background-color: #fbfcfe; /* Color de fondo del menú */
+  border-radius: 8px; /* Bordes redondeados */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* Sombra sutil */
+  display: flex; /* Usar flexbox para alinear los botones */
+  height: 70px; /* Altura del menú */
+}
+
+/* Estilos para los botones */
+.custom-menu .custom-btn {
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  font-weight: 600; /* Texto más grueso */
+  flex: 1; /* Cada botón ocupa el mismo espacio */
+  padding: 0; /* Sin padding para que ocupen todo el alto */
+  margin: 0; /* Sin margen entre botones */
+  background-color: transparent; /* Fondo transparente por defecto */
+  color: #1d1c1c; /* Color del texto (blanco) */
+  border: none; /* Sin borde */
+  border-radius: 0; /* Sin bordes redondeados para un efecto de franja */
+  text-decoration: none; /* Sin subrayado */
+  transition: all 0.3s ease; /* Transiciones suaves para todos los cambios */
+  font-size: 18px; /* Tamaño de fuente aumentado */
+  cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+  display: flex; /* Usar flexbox dentro del botón para centrar texto */
+  align-items: center; /* Centrar verticalmente el texto */
+  justify-content: center; /* Centrar horizontalmente el texto */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para un efecto 3D */
+  height: 100%; /* Ocupa todo el alto del menú */
+}
+
+/* Efecto hover para los botones específicos */
+.custom-menu .custom-btn:hover {
+  background-color: rgba(10, 44, 85, 0.58); /* Color de fondo en hover */
+  color: #ffffff; /* Color del texto */
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); /* Sombra más pronunciada al pasar el mouse */
+  transform: translateY(-2px); /* Levanta el botón un poco */
+}
+
+/* Estilo para el botón activo */
+.custom-menu .custom-btn.active {
+  background-color: rgba(10, 44, 85, 0.92);; /* Color de fondo del botón activo */
+  color: #e7b915; /* Color del texto en dorado claro */
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3); /* Sombra más profunda para el botón activo */
+  transform: translateY(-2px); /* Levanta el botón activo */
+}
